# erp2gcal

./: .gitignore  Erp2gcal.py  README.md  cms.py  courseParse.py  erp.py  erp2gcal.py  gcal.py  main.py  pyproject.toml  requirements.txt  unenrol.py
.github/ISSUE_TEMPLATE/: bug_report.md
cms/: cms.py  enrol.py
erp/: Erp2gcal.py  courseParse.py  erp.py
src/: cms.py  cms_actions.py  cms_driver.py  courseParse.py  course_parse.py  erp.py  erp2gcal.py  erp_driver.py  gcal_actions.py  main.py  utils.py
src/models/: Course.py
src/utils/: bcolors.py
tests/: test_parser.py
tests/models/: test_Course.py
utils/: clean_all_created_events.py
