[tool.poetry]
name = "erp2gcal"
version = "0.1.0"
description = "A python script with selenium which can create google calendar events for your timetable and also perform batch enrol/unenrol courses on cms."
authors = ["pnicto <ydkr789@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
