[tool.poetry]
name = "erp2gcal"
version = "0.1.0"
description = "A python script with selenium which can create google calendar events for your timetable and also perform batch enrol/unenrol courses on cms."
authors = ["pnicto <ydkr789@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
requests = "^2.28.2"
clint = "^0.5.1"
google-api-python-client = "^2.74.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
clize = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  ".",
  "test"
]
